changed mouse events to pointer events to capture off svg drags

--- a/src/app/workflow-canvas/workflow-canvas.component.html
+++ b/src/app/workflow-canvas/workflow-canvas.component.html
@@ -5,10 +5,10 @@
      baseProfile="full"
      width="300" height="200"
      xmlns="http://www.w3.org/2000/svg"
-    (mousemove)="onMouseMove($event)"
-    (mouseup)="onMouseUp($event)"
-    (mousedown)="onMouseDown($event)"
-    (mouseenter)="onMouseEnter($event)"
+    
+    (pointerup)="onPointerUp($event)"
+    (pointerdown)="onPointerDown($event)"
+    (pointermove)="onPointerMove($event)"
 
      class="workflow-canvas"
      >
