added rect and circle nodes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<div><button (click)="canvas.newTask()">new shape</button></div>
+<div><button (click)="canvas.newTask()">new task</button></div>
+<div><button (click)="canvas.newDecision()">new decision</button></div>
+<div><button (click)="canvas.newTerminator()">new terminator</button></div>
 
 <app-workflow-canvas #canvas></app-workflow-canvas>
