--- a/src/app/workflow-canvas/workflow-canvas.component.html
+++ b/src/app/workflow-canvas/workflow-canvas.component.html
@@ -23,6 +23,11 @@
     <svg:g app-workflow-task [node]="node" *ngIf="node.constructor.name === 'RectWorkflowNode' "></svg:g>
     <svg:g app-workflow-terminator [node]="node" *ngIf="node.constructor.name === 'CircleWorkflowNode' "></svg:g>
     <svg:g app-workflow-decision [node]="node" *ngIf="node.constructor.name === 'DiamondWorkflowNode' "></svg:g>
+
+    <svg:g *ngIf="isSelecting">
+      <svg:rect [attr.x]="getSelectionStartX()" [attr.y]="getSelectionStartY()" [attr.width]="getSelectionWidth()" [attr.height]="getSelectionHeight()" fill="none" stroke="red" ></svg:rect>
+    </svg:g>
+    
   </svg:g>
   
 
