added selection box and selection styles

--- a/src/app/workflow-canvas/workflow-decision/workflow-decision.component.html
+++ b/src/app/workflow-canvas/workflow-decision/workflow-decision.component.html
@@ -1,7 +1,6 @@
 <svg:path  
   [attr.d]="path()" 
   
-  fill="White" 
-  stroke="DarkOrange"
+  [attr.class]="node.selected?'is-selected':'not-selected'"
 
   />
