--- a/src/app/workflow-canvas/workflow-canvas.component.html
+++ b/src/app/workflow-canvas/workflow-canvas.component.html
@@ -1,6 +1,4 @@
-<p>
-  workflow-canvas works!
-</p>
+
 <svg version="1.1"
      baseProfile="full"
      width="800" height="600"
@@ -13,19 +11,33 @@
      class="workflow-canvas"
      >
 
-  <!-- <rect width="100%" height="100%" fill="red" />
-
-  <circle cx="150" cy="100" r="80" fill="green" />
-
-  <text x="150" y="125" font-size="60" text-anchor="middle" fill="white">SVG</text> -->
-
   <svg:g *ngFor="let node of nodes">
+    <svg:style type="text/css" >
+      <![CDATA[
+          .is-selected {
+              stroke: pink;
+              fill:   yellow;
+          }
+          .not-selected {
+              stroke: yellow;
+              fill:   pink;
+          }
+          .is_selecting {
+            stroke: lightblue;
+            fill:   lightskyblue;
+            fill-opacity: 0.1;
+          }
+      ]]>
+  </svg:style>
+
     <svg:g app-workflow-task [node]="node" *ngIf="node.constructor.name === 'RectWorkflowNode' "></svg:g>
     <svg:g app-workflow-terminator [node]="node" *ngIf="node.constructor.name === 'CircleWorkflowNode' "></svg:g>
     <svg:g app-workflow-decision [node]="node" *ngIf="node.constructor.name === 'DiamondWorkflowNode' "></svg:g>
 
     <svg:g *ngIf="isSelecting">
-      <svg:rect [attr.x]="getSelectionStartX()" [attr.y]="getSelectionStartY()" [attr.width]="getSelectionWidth()" [attr.height]="getSelectionHeight()" fill="none" stroke="red" ></svg:rect>
+      <svg:rect [attr.x]="getSelectionStartX()" [attr.y]="getSelectionStartY()" 
+        [attr.width]="getSelectionWidth()" [attr.height]="getSelectionHeight()" 
+        [attr.class]="'is_selecting'" ></svg:rect>
     </svg:g>
     
   </svg:g>
