improved selection rendering

--- a/src/app/workflow-canvas/workflow-canvas.component.html
+++ b/src/app/workflow-canvas/workflow-canvas.component.html
@@ -15,13 +15,16 @@
     <svg:style type="text/css" >
       <![CDATA[
           .is-selected {
-              stroke: pink;
-              fill:   yellow;
+              stroke: black;
+              fill:   white;
+              stroke-dasharray:4;
+              cursor: move;
           }
           .not-selected {
-              stroke: yellow;
-              fill:   pink;
-          }
+              stroke: black;
+              fill:   white;
+              cursor: move;
+          } 
           .is_selecting {
             stroke: lightblue;
             fill:   lightskyblue;
