--- a/src/app/workflow-canvas/workflow-decision/workflow-decision.component.html
+++ b/src/app/workflow-canvas/workflow-decision/workflow-decision.component.html
@@ -1,6 +1,6 @@
 <svg:path  
   [attr.d]="path()" 
   
-  [attr.class]="node.selected?'is-selected':'not-selected'"
+  [attr.class]="node.isSelected()?'is-selected':'not-selected'"
 
   />
