--- a/src/app/workflow-canvas/workflow-task/workflow-task.component.html
+++ b/src/app/workflow-canvas/workflow-task/workflow-task.component.html
@@ -4,5 +4,5 @@
   [attr.width]="node.width" 
   [attr.height]="node.height" 
   
-  [attr.class]="node.selected?'is-selected':'not-selected'"
+  [attr.class]="node.isSelected()?'is-selected':'not-selected'"
   />
