--- a/src/app/workflow-canvas/workflow-terminator/workflow-terminator.component.html
+++ b/src/app/workflow-canvas/workflow-terminator/workflow-terminator.component.html
@@ -4,6 +4,6 @@
   [attr.cy]="node.y" 
   [attr.r]="node.radius" 
   
-  [attr.class]="node.selected?'is-selected':'not-selected'"
+  [attr.class]="node.isSelected()?'is-selected':'not-selected'"
 
   />
