added resize handle rendering

--- a/src/app/workflow-canvas/workflow-canvas.component.html
+++ b/src/app/workflow-canvas/workflow-canvas.component.html
@@ -30,6 +30,35 @@
             fill:   lightskyblue;
             fill-opacity: 0.1;
           }
+          .selection-handle {
+            stroke: none;
+            fill:   lightskyblue;
+            fill-opacity: 0.50;
+          }
+          .north-resize {
+            cursor: n-resize;
+          }
+          .east-resize {
+            cursor: e-resize;
+          }
+          .south-resize {
+            cursor: s-resize;
+          }
+          .west-resize {
+            cursor: w-resize;
+          }
+          .north-west-resize {
+            cursor: nw-resize;
+          }
+          .north-east-resize {
+            cursor: ne-resize;
+          }
+          .south-west-resize {
+            cursor: sw-resize;
+          }
+          .south-east-resize {
+            cursor: se-resize;
+          }
       ]]>
   </svg:style>
 
