--- a/src/app/workflow-canvas/workflow-task/workflow-task.component.html
+++ b/src/app/workflow-canvas/workflow-task/workflow-task.component.html
@@ -6,3 +6,59 @@
   
   [attr.class]="node.isSelected()?'is-selected':'not-selected'"
   />
+
+  <svg:circle  *ngIf="node.isSelected()"
+  [attr.cx]="node.x" 
+  [attr.cy]="node.y" 
+  [attr.r]="5" 
+  [attr.class]="'selection-handle north-west-resize'"
+  />
+
+  <svg:circle  *ngIf="node.isSelected()"
+  [attr.cx]="node.x + (node.width/2)" 
+  [attr.cy]="node.y" 
+  [attr.r]="5" 
+  [attr.class]="'selection-handle north-resize'"
+  />
+
+  <svg:circle  *ngIf="node.isSelected()"
+  [attr.cx]="node.x + node.width" 
+  [attr.cy]="node.y" 
+  [attr.r]="5" 
+  [attr.class]="'selection-handle north-east-resize'"
+  />
+
+  <svg:circle  *ngIf="node.isSelected()"
+  [attr.cx]="node.x + node.width" 
+  [attr.cy]="node.y + (node.height/2)" 
+  [attr.r]="5" 
+  [attr.class]="'selection-handle east-resize'"
+  />
+
+  <svg:circle  *ngIf="node.isSelected()"
+  [attr.cx]="node.x + node.width" 
+  [attr.cy]="node.y + node.height" 
+  [attr.r]="5" 
+  [attr.class]="'selection-handle south-east-resize'"
+  />
+
+  <svg:circle  *ngIf="node.isSelected()"
+  [attr.cx]="node.x + (node.width/2)" 
+  [attr.cy]="node.y + node.height" 
+  [attr.r]="5" 
+  [attr.class]="'selection-handle south-resize'"
+  />
+
+  <svg:circle  *ngIf="node.isSelected()"
+  [attr.cx]="node.x" 
+  [attr.cy]="node.y + node.height" 
+  [attr.r]="5" 
+  [attr.class]="'selection-handle south-west-resize'"
+  />
+
+  <svg:circle  *ngIf="node.isSelected()"
+  [attr.cx]="node.x" 
+  [attr.cy]="node.y + (node.height/2)" 
+  [attr.r]="5" 
+  [attr.class]="'selection-handle west-resize'"
+  />
