highlights source connection sites

--- a/src/app/workflow-canvas/workflow-canvas.component.html
+++ b/src/app/workflow-canvas/workflow-canvas.component.html
@@ -59,6 +59,11 @@
           .south-east-resize {
             cursor: se-resize;
           }
+          .connection-handle {
+            stroke: none;
+            fill:   lime;
+            fill-opacity: 0.50;
+          }
       ]]>
   </svg:style>
 
