--- a/src/app/workflow-canvas/workflow-terminator/workflow-terminator.component.html
+++ b/src/app/workflow-canvas/workflow-terminator/workflow-terminator.component.html
@@ -14,3 +14,31 @@
   [attr.r]="5" 
   [attr.class]="'selection-handle east-resize'"
   />
+
+  <svg:circle  *ngIf="node.showNorthConnection()"
+  [attr.cx]="node.x" 
+  [attr.cy]="node.y-node.radius" 
+  [attr.r]="10" 
+  [attr.class]="'connection-handle'"
+  />
+
+  <svg:circle  *ngIf="node.showSouthConnection()"
+  [attr.cx]="node.x" 
+  [attr.cy]="node.y+node.radius" 
+  [attr.r]="10" 
+  [attr.class]="'connection-handle'"
+  />
+
+  <svg:circle  *ngIf="node.showEastConnection()"
+  [attr.cx]="node.x+node.radius" 
+  [attr.cy]="node.y" 
+  [attr.r]="10" 
+  [attr.class]="'connection-handle'"
+  />
+
+  <svg:circle  *ngIf="node.showWestConnection()"
+  [attr.cx]="node.x-node.radius" 
+  [attr.cy]="node.y" 
+  [attr.r]="10" 
+  [attr.class]="'connection-handle'"
+  />
