--- a/src/app/workflow-canvas/workflow-canvas.component.html
+++ b/src/app/workflow-canvas/workflow-canvas.component.html
@@ -1,5 +1,5 @@
 
-<svg version="1.1"
+<svg:svg version="1.1"
      baseProfile="full"
      width="800" height="600"
      xmlns="http://www.w3.org/2000/svg"
@@ -9,10 +9,9 @@
     (pointermove)="onPointerMove($event)"
 
      class="workflow-canvas"
-     >
-
-     <svg:style type="text/css" >
-     <![CDATA[
+     > 
+     <style type="text/css" >
+     
          .is-selected {
              stroke: black;
              fill:   white;
@@ -71,17 +70,16 @@
           stroke: black;
           stroke-width: 1;
         }
-     ]]>
- </svg:style>
+ </style>
  <svg:defs>
    <svg:marker id="arrow" viewBox="0 0 10 10" refX="10" refY="5"
        markerWidth="10" markerHeight="10"
        orient="auto-start-reverse">
-     <path d="M 0 0 L 10 5 L 0 10" />
+     <svg:path d="M 0 0 L 10 5 L 0 10" />
    </svg:marker>
  </svg:defs>
 
-  <svg:g *ngFor="let node of nodes">
+  <svg:g *ngFor="let node of model.nodes">
     
 
     <svg:g app-workflow-task [node]="node" *ngIf="node.constructor.name === 'RectWorkflowNode' "></svg:g>
@@ -101,9 +99,9 @@
     
   </svg:g>
   
-  <svg:g *ngFor="let edge of edges">
+  <svg:g *ngFor="let edge of model.edges">
     <svg:path [attr.d]="edge.connectionPath()"
         [attr.class]="'connected'" marker-end="url(#arrow)"></svg:path>
   </svg:g>
 
-</svg>
+</svg:svg>
